<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/general_margin"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invoice_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_name"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/invoice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_name"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invoice_item_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/checkout_padding"
            android:text="@string/checkout_brand"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/invoice_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/checkout_padding"
            android:text="@string/checkout_brand"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invoice_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/checkout_padding"
            android:text="@string/checkout_price"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/invoice_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/checkout_padding"
            android:text="@string/checkout_price"
            android:textAlignment="center"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>